--- a/backend/package.json
+++ b/backend/package.json
@@ -6,10 +6,10 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "start:dev": "NODE_ENV=development nest start --watch",
+    "start:dev": "nest start --watch NODE_ENV=development",
     "build": "nest build",
-    "start:prod": "NODE_ENV=production node dist/src/main",
-    "start:server": "yarn install && nest build && NODE_ENV=production node dist/src/main"
+    "start:prod": "node dist/src/main NODE_ENV=production",
+    "start:server": "yarn install && nest build && node dist/src/main NODE_ENV=production"
   },
   "dependencies": {
     "@nestjs/axios": "^3.0.3",
@@ -62,19 +62,13 @@
     "typescript": "^5.1.3"
   },
   "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
+    "moduleFileExtensions": ["js", "json", "ts"],
     "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
+    "collectCoverageFrom": ["**/*.(t|j)s"],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
   }
